force-app/main/default/objects/Schedule_Z_Subscription__c/Schedule_Z_Subscription__c.object-meta.xml
<CustomObject>
    <label>Allocation Schedule Subscription</label>
    <nameField>
        <displayFormat>ALSS-{0000}</displayFormat>
        <label>Allocation Schedule Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedule Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>