force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when used on first production update, unchecked when production update uses newer Allocation Schedule</inlineHelpText>
    <label>Billing</label>
    <type>Checkbox</type>
</CustomField>