force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Customer_Subscription_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subscription_kW_DC__c</fullName>
    <inlineHelpText>The size of the UAS at the time of Allocation Schedule filing</inlineHelpText>
    <label>Customer Subscription kW DC</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>