force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when a newer Allocation Schedule replaces this one during billing</inlineHelpText>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>