force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Enacted__c.field-meta.xml
<CustomField>
    <fullName>Enacted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when the Allocation Schedule is enacted by the utility and unchecked when no longer being used for billing</inlineHelpText>
    <label>Enacted</label>
    <type>Checkbox</type>
</CustomField>