force-app/main/default/objects/Schedule_Z_Subscription__c/fields/kW_Allocation__c.field-meta.xml
<CustomField>
    <fullName>kW_Allocation__c</fullName>
    <description>This field multiplies the Future Share of System by the System Size in kw DC. This is different from the other kw DC field we have because it uses the rounded (determined by utility) share of system.</description>
    <formula>Percent_Share__c *  Schedule_Z__r.Shared_Solar_System__r.Total_System_Size_kWh_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>kW size based on % subscription on allocation schedule</inlineHelpText>
    <label>kW Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>