force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Number_of_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Decimal_Places__c</fullName>
    <defaultValue>4</defaultValue>
    <inlineHelpText>The number of decimal places listed on the Allocation Schedule at the time of Allocation Schedule filing</inlineHelpText>
    <label>Number of Decimal Places</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>