force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Percent_Share__c</fullName>
    <formula>ROUND(Customer_Subscription_kW_DC__c/System_Size_kW_DC__c , Number_of_Decimal_Places__c + 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Share</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>