force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Percent_Share_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Percent_Share_Number_Format__c</fullName>
    <formula>Percent_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used in the NY NG Allocation Schedule Conga Template because they require the excel template to use Excel Percentage formatting.</inlineHelpText>
    <label>Percent Share Number Format</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>