force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Regenerate_Bill__c.field-meta.xml
<CustomField>
    <fullName>Regenerate_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regenerate Bill</label>
    <type>Checkbox</type>
</CustomField>