force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Schedule_Z__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z__c</fullName>
    <label>Allocation Schedule</label>
    <referenceTo>Schedule_Z__c</referenceTo>
    <relationshipName>Schedule_Z_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>