force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Schedule_Z_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z_Status__c</fullName>
    <formula>TEXT(Schedule_Z__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Schedule Status</label>
    <type>Text</type>
</CustomField>