force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Stop_Credit_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stop_Credit_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, skips Account Bill creation for this subscription. Used to handle finaled utility accounts that no longer receive credits, but are still on the credit allocation schedule. Set manually when previewing bills and comparing to a transfer sheet.</inlineHelpText>
    <label>Stop Credit Transfer</label>
    <type>Checkbox</type>
</CustomField>