force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Unchecked until Allocation Schedule is submitted to the utility</inlineHelpText>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>