force-app/main/default/objects/Schedule_Z_Subscription__c/fields/System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>System_Size_kW_DC__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The size of the solar system at the time of Allocation Schedule filing</inlineHelpText>
    <label>System Size (kW DC)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>