force-app/main/default/objects/Schedule_Z_Subscription__c/fields/Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Subscription__c</fullName>
    <label>Utility Account Subscription</label>
    <referenceTo>Utility_Account_Subscription__c</referenceTo>
    <relationshipName>Schedule_Z_Subscriptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>