force-app/main/default/objects/Schedule_Z_Subscription__c/validationRules/Cannot_Stop_Credit_Transfer.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Stop_Credit_Transfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Stop_Credit_Transfer__c,
    NOT(Utility_Account_Subscription__r.Finaled__c),
    NOT(Utility_Account_Subscription__r.Early_Removal__c))</errorConditionFormula>
    <errorDisplayField>Stop_Credit_Transfer__c</errorDisplayField>
    <errorMessage>You cannot stop a credit transfer unless the UAS is finaled (by setting the Date Utility Account Cancelled on the UAL) or the UAS is marked for Early Removal.</errorMessage>
</ValidationRule>